--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://julzar.github.io.homework-19-employee-directory",
+  "homepage": "https://julzar.github.io/homework-19-employee-directory/",
   "name": "hw-19",
   "version": "0.1.0",
   "private": true,
