--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://julzar.github.io/homework-19-employee-directory/",
-  "name": "hw-19",
+  "name": "homework-19-employee-directory",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
